feat : 멀티 파트 request 파싱 및 필드 값 구현