@@ -1,17 +1,21 @@
 package codesquad.was.http.request;
 
 
+import codesquad.was.http.common.HttpHeaders;
 import codesquad.was.http.common.Mime;
 import codesquad.was.session.Manager;
 import codesquad.was.session.Session;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
-import java.io.*;
+import java.io.BufferedReader;
+import java.io.IOException;
+import java.io.InputStream;
+import java.io.InputStreamReader;
 import java.net.URL;
 import java.net.URLDecoder;
-import java.util.Arrays;
-import java.util.List;
+import java.nio.charset.StandardCharsets;
+import java.util.*;
 import java.util.function.Consumer;
 
 import static codesquad.was.session.Session.sessionStr;
@@ -43,6 +47,7 @@ public class HttpRequestParser {
         String headerLine;
 
         while (!(headerLine = reader.readLine()).isEmpty()) {
+            logger.info("Header: {}", headerLine);
             requestSb.append(headerLine).append("\n");
             String[] headerParts = headerLine.split(": ", 2);
             if (headerParts.length == 2) {
@@ -70,10 +75,7 @@ public class HttpRequestParser {
 
     private static void parseCookies(String cookieHeader, HttpRequest request) {
         String[] cookies = cookieHeader.split("; ");
-        Arrays.stream(cookies)
-                .map(cookie -> cookie.split("=", 2))
-                .filter(cookieParts -> cookieParts.length == 2)
-                .forEach(addCookieTo(request));
+        Arrays.stream(cookies).map(cookie -> cookie.split("=", 2)).filter(cookieParts -> cookieParts.length == 2).forEach(addCookieTo(request));
     }
 
     private static Consumer<String[]> addCookieTo(HttpRequest request) {
@@ -94,20 +96,40 @@ public class HttpRequestParser {
     private static void parseBody(HttpRequest request, BufferedReader reader) throws IOException {
 //         Parse body (if any)
         String contentType = null;
-        List<String> contentTypeList = request.getHeaders().getHeader("Content-Type");
+        HttpHeaders headers = request.getHeaders();
+        Set<String> headerNames = headers.getHeaderNames();
+        for (String headerName : headerNames) {
+            System.out.println("헤더이름" + headerName);
+        }
+        List<String> contentTypeList = headers.getHeader("Content-Type");
+
+        if (contentTypeList != null) {
+            contentType = contentTypeList.get(0);
+        }
+
+        // Handle multipart/form-data
+        if (contentType != null && contentType.startsWith("multipart/form-data")) {
+            String boundary = extractBoundary(contentType);
+            if (boundary != null) {
+                parseMultipartData(request, reader, boundary);
+                return;
+            }
+        }
+
         if (contentTypeList != null) {
             contentType = contentTypeList.get(0);
             request.setContentType(Mime.fromString(contentType));
         }
+
         StringBuilder body = new StringBuilder();
 
         while (reader.ready()) {
             body.append((char) reader.read());
         }
 
-        logger.info("리퀘스트 바디{}", body.toString());
+        logger.info("리퀘스트 바디{}", body);
 
-        String bodyStr = URLDecoder.decode(body.toString(), "UTF-8");
+        String bodyStr = URLDecoder.decode(body.toString(), StandardCharsets.UTF_8);
 
         if ("application/x-www-form-urlencoded".equals(contentType)) {
 
@@ -118,5 +140,92 @@ public class HttpRequestParser {
         if (contentType == null || contentType.isEmpty()) {
             request.setBody(bodyStr);
         }
+    }
+
+    private static String extractBoundary(String contentType) {
+        String[] params = contentType.split(";");
+        for (String param : params) {
+            param = param.trim();
+            if (param.startsWith("boundary=")) {
+                return param.substring("boundary=".length());
+            }
+        }
+        return null;
+    }
+
+    // Parse the multipart data
+    private static void parseMultipartData(HttpRequest request, BufferedReader reader, String boundary) throws IOException {
+        String boundaryLine = "--" + boundary;
+        String endBoundaryLine = boundaryLine + "--";
+        String line;
+        boolean inPart = false;
+        boolean isHeader = true;
+        Map<String, String> partHeaders = new HashMap<>();
+        StringBuilder partData = new StringBuilder();
+
+        while ((line = reader.readLine()) != null) {
+            logger.info("multipartLine: {}", line);
+
+            if (line.equals(boundaryLine)) {
+                if (inPart) {
+                    processPart(request, partHeaders, partData.toString());
+                    partHeaders.clear();
+                    partData.setLength(0);
+                }
+                inPart = true;
+                isHeader = true;
+            } else if (line.equals(endBoundaryLine)) {
+                if (inPart) {
+                    processPart(request, partHeaders, partData.toString());
+                }
+                break;
+            } else if (inPart) {
+                if (isHeader) {
+                    if (line.isEmpty()) {
+                        isHeader = false; // End of headers, start of body
+                    } else {
+                        int colonIndex = line.indexOf(':');
+                        if (colonIndex != -1) {
+                            String headerName = line.substring(0, colonIndex).trim();
+                            String headerValue = line.substring(colonIndex + 1).trim();
+                            partHeaders.put(headerName, headerValue);
+                        }
+                    }
+                } else {
+                    partData.append(line).append("\r\n");
+                }
+            }
+        }
+    }
+
+    private static void processPart(HttpRequest request, Map<String, String> headers, String data) throws IOException {
+        String contentDisposition = headers.get("Content-Disposition");
+        if (contentDisposition != null) {
+            Map<String, String> dispositionParams = parseContentDisposition(contentDisposition);
+            String name = dispositionParams.get("name");
+            String filename = dispositionParams.get("filename");
+
+            if (filename != null) {
+                byte[] fileContent = data.getBytes(StandardCharsets.ISO_8859_1);
+                request.addFile(name, filename, fileContent);
+            } else {
+                String value = data.trim();
+                request.addParameter(name, value);
+            }
+        }
+    }
+
+    private static Map<String, String> parseContentDisposition(String contentDisposition) {
+        Map<String, String> params = new HashMap<>();
+        String[] parts = contentDisposition.split(";");
+        for (String part : parts) {
+            int equalsIndex = part.indexOf('=');
+            if (equalsIndex != -1) {
+                String name = part.substring(0, equalsIndex).trim();
+                String value = part.substring(equalsIndex + 1).trim().replace("\"", "");
+                params.put(name, value);
+            }
+        }
+        return params;
     }
 }
